--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
       <div class="Construction">
-       <img src="/images/Group 76398.png" class="bg-image" alt="">
-       <img src="/images/V4 gold.png" alt="" class="logo">
+       <img src="./images/Group 76398.png" class="bg-image" alt="">
+       <img src="./images/V4 gold.png" alt="" class="logo">
        <div class="text-site">
         <h1 >الموقع تحت الإنشاء</h1>
        </div>
